add AuthMiddleware to validate jwt on authorization header
