# docs/swagger.json
@@ -6,6 +6,11 @@
     "paths": {
         "/api/v1/entries-time": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve a paginated list of entry times for a user",
                 "produces": [
                     "application/json"
@@ -26,6 +31,13 @@
                         "name": "page_number",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -43,6 +55,11 @@
         },
         "/api/v1/entry-time": {
             "put": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Update an existing entry time by its ID",
                 "consumes": [
                     "application/json"
@@ -61,6 +78,13 @@
                         "schema": {
                             "$ref": "#/definitions/handler.UpdateEntryTimeParams"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -73,6 +97,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Create a new time entry for a user",
                 "consumes": [
                     "application/json"
@@ -91,6 +120,13 @@
                         "schema": {
                             "$ref": "#/definitions/handler.CreateEntryTimeParams"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -105,6 +141,11 @@
         },
         "/api/v1/entry-time/{id}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve an entry time by its ID",
                 "produces": [
                     "application/json"
@@ -118,6 +159,13 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -130,6 +178,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Delete an entry time by its ID",
                 "produces": [
                     "application/json"
@@ -142,6 +195,13 @@
                         "description": "Entry Time ID",
                         "name": "id",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Insert your access token",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
