# internal/api/handler/entry_time.go
@@ -41,6 +41,8 @@ func parseEntryTimeResponse(entryTime controller.EntryTimeResponse) EntryTimeRes
 // @Param request body CreateEntryTimeParams true "Entry Time Data"
 // @Success 201 {object} EntryTimeResponse
 // @Router /api/v1/entry-time [post]
+// @Security BearerAuth
+// @Param Authorization header string true "Insert your access token"
 func (h *Handler) CreateEntryTime(c echo.Context) error {
 	var entryTimeParams CreateEntryTimeParams
 	err := c.Bind(&entryTimeParams)
@@ -76,6 +78,8 @@ type GetEntryTimeParam struct {
 // @Param id path string true "Entry Time ID"
 // @Success 200 {object} EntryTimeResponse
 // @Router /api/v1/entry-time/{id} [get]
+// @Security BearerAuth
+// @Param Authorization header string true "Insert your access token"
 func (h *Handler) GetEntryTime(c echo.Context) error {
 	var entryTimeParams GetEntryTimeParam
 	err := c.Bind(&entryTimeParams)
@@ -106,6 +110,8 @@ type ListEntryTimeParams struct {
 // @Param page_number query int true "Page number (must be >= 1)"
 // @Success 200 {array} EntryTimeResponse
 // @Router /api/v1/entries-time [get]
+// @Security BearerAuth
+// @Param Authorization header string true "Insert your access token"
 func (h *Handler) ListEntryTime(c echo.Context) error {
 	var listEntryTimeParams ListEntryTimeParams
 	err := c.Bind(&listEntryTimeParams)
@@ -147,6 +153,8 @@ type UpdateEntryTimeParams struct {
 // @Param request body UpdateEntryTimeParams true "Entry Time Data"
 // @Success 200 {object} EntryTimeResponse
 // @Router /api/v1/entry-time [put]
+// @Security BearerAuth
+// @Param Authorization header string true "Insert your access token"
 func (h *Handler) UpdateEntryTime(c echo.Context) error {
 	var updateEntryTimeParams UpdateEntryTimeParams
 	err := c.Bind(&updateEntryTimeParams)
@@ -182,6 +190,8 @@ type DeleteEntryTimeParams struct {
 // @Param id path string true "Entry Time ID"
 // @Success 202 "No Content"
 // @Router /api/v1/entry-time/{id} [delete]
+// @Security BearerAuth
+// @Param Authorization header string true "Insert your access token"
 func (h *Handler) DeleteEntryTime(c echo.Context) error {
 	var deleteEntryTimeParams DeleteEntryTimeParams
 	err := c.Bind(&deleteEntryTimeParams)
